--- a/styles/cabecera.css
+++ b/styles/cabecera.css
@@ -11,7 +11,6 @@
 	background-color: #911F27;
 	font-family: 'Raleway', sans-serif;
   font-size: 18px;
-  max-width: 480px;
 	}
 
 .logo-cabecera {
@@ -23,7 +22,7 @@
 .menu-rayas ul{
 list-style-type: none;
 background-color: #911F27;
-display: none;
+/*isplay: none;*/
 }
 .menu-rayas li {
 display: inline-block;
@@ -50,7 +49,7 @@ padding: 4px;
 
 }
 .menu-rayas {
-	display: none;
+
 	position: relative;
 	left:0;
 }
