--- a/styles/cabecera.css
+++ b/styles/cabecera.css
@@ -11,10 +11,11 @@
 	background-color: #911F27;
 	font-family: 'Raleway', sans-serif;
   font-size: 18px;
+	color: #ffffff;
 	}
 
 .logo-cabecera {
-	width: 20%;
+	width: 15%;
 	height: auto;
 	padding-top: 2px;
 }
@@ -56,6 +57,10 @@ padding: 4px;
 ul.rayas {
 	margin-top: 17px;
 	padding-left: 12px;
+}
+
+.about-us {
+	padding-left: 20px;
 }
 
 @media all and (max-width:420px) {
