--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@
 	display: flex;
 	flex-direction: column;
 	padding: 15px;
-	margin: 0 auto 15px;
+	margin: 15px auto;
 
 }
 
@@ -133,7 +133,7 @@
 	/*font-weight: bold;*/
 }
  fieldset {
-	 margin-top: 10px;
+	 margin-top: 15px;
  }
 /*DATOS PERSONALES*/
 
