--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,10 @@
 
 }
 /*HEADER*/
-.header {
-	display: flex;
+/*	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-}
+}*/
 
 .text-principal {
 	display: flex;
