--- a/styles/cabecera.css
+++ b/styles/cabecera.css
@@ -9,25 +9,31 @@
 	font-family: 'Raleway', sans-serif;
   font-size: 18px;
 	color: #ffffff;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 100px;
 	}
 
 .logo-cabecera {
-	width: auto;
+	display: flex;
+	justify-content: flex-start;
+	width: 35px;
 	height: 35px;
 	padding-top: 2px;
 }
 
-.rayas {
+
+.menu {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+  justify-content: space-around;
 	padding: 20px;
 	list-style-type: none;
 	background-color: #911F27;
 }
 
 .persoalizatucv {
-	
+
 }
 
 
