--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 
 .principal-content {
 	display: flex;
@@ -5,33 +6,40 @@
 	justify-content: center;
 	align-items: center;
 	width: 95%;
-	height: 100vh;
-	margin: auto;
+	min-height: 100vh;
+	margin: 100px auto;
 }
 .important {
 	font-weight:bold;
 }
-.contact-form {
-	display: flex;
-	flex-direction: column;
-}
+
+/*TEXTO*/
 .title {
+	font-family: 'Indie Flower';
 	font-weight: bold;
 	font-size: 1.5em;
+	text-decoration: underline;
 	text-transform: uppercase;
 	padding: 20px 0px;
 }
 .subtitle {
+	font-family: 'Indie Flower';
 	font-weight: bold;
 	font-size: 1.3em;
+	text-decoration: underline;
 	text-transform: uppercase;
 	padding: 20px 0px;
 }
 .paragraph {
 	padding: 10px 0px;
 }
+
+/*FORMULARIO*/
 .contact-form {
+	display: flex;
+	flex-direction: column;
 	margin: 10px auto;
+	width: 90%;
 }
 .label {
 	padding: 5px 0px;
@@ -45,4 +53,20 @@
 	width: 30%;
 	border-radius: 5px;
 	font-weight: bold;
+}
+
+/*MEDIAQUERIES*/
+
+@media all and (min-width: 700px) {
+	.contact-form {
+		margin: 10px auto;
+		width: 70%;
+	}
+}
+
+@media all and (min-width: 900px) {
+	.contact-form {
+		margin: 10px auto;
+		width: 60%;
+	}
 }
