--- a/styles/cabecera.css
+++ b/styles/cabecera.css
@@ -5,7 +5,7 @@
 	left: 0;
 	z-index: 10000;
 	width: 100%;
-	background-color: #911F27;
+	background-color: #006D9D;
 	font-family: 'Raleway', sans-serif;
   font-size: 18px;
 	color: #ffffff;
