--- a/styles/style.css
+++ b/styles/style.css
@@ -7,18 +7,17 @@
 }
 
 body {
-	background-color: #413739;
+	background-color: white;
 }
-
-.personalizatucv {
+.personalizar {
 	width: 100%;
 	margin-top: 100px;
 	display: flex;
+	flex-direction: row;
 	border-radius: 2px;
 	justify-content: center;
-	align-items: center;
-	text-align: center;
 }
+
 /*Pagina principal*/
 .background {
 	height: 100vh;
@@ -211,7 +210,7 @@ body {
 	box-shadow: 4px 4px 1px #888888;
 }
 .section legend {
-	background-color: #3AF2A8;
+	background-color: #006D9D;
 	padding: 15px;
 	color: #fff;
 	position: absolute;
@@ -327,7 +326,7 @@ body {
 	align-items: center;
 	height: 70px;
 
-	background-color: #240406
+	background-color: #272727;
 }
 .copy {
 	color: #FCF0C8;
