--- a/styles/style.css
+++ b/styles/style.css
@@ -5,18 +5,38 @@
 	font-family: 'Rubik', sans-serif;
 
 }
+.personalizatucv h1 {
+	margin-top: 150px;
+	display: flex;
+	justify-content: center;
+	font-size: 40px;
+}
 
 body {
 	background-color: white;
 }
 .personalizar {
-	width: 100%;
+	max-width: 420px;
 	margin-top: 100px;
 	display: flex;
 	flex-direction: row;
-	border-radius: 2px;
+	border: 1px solid #262626;
+	border-radius: 15px;
+	border-color: #fcac0c;
 	justify-content: center;
+	align-items: center;
+	height: 150px;
+
 }
+.personalizatucv {
+	padding: 15px;
+}
+.personalizar img {
+	padding: 10px;
+	height: 125px;
+	width: 125px;
+}
+
 
 /*Pagina principal*/
 .background {
@@ -325,7 +345,6 @@ body {
 	justify-content: space-around;
 	align-items: center;
 	height: 70px;
-
 	background-color: #272727;
 }
 .copy {
