--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,8 @@
 	font-family: 'Rubik', sans-serif;
 
 }
-.personalizatucv h1 {
+
+h1 {
 	margin-top: 150px;
 	display: flex;
 	justify-content: center;
@@ -165,10 +166,46 @@ body {
 
 
 /*BOTONES FORMULARIO*/
-
 .btnSection {
 	position:absolute;
-	top: 6px;
+	width: 75%;
+	top: 5px;
+	right: 15px;
+	width: 35px;
+	height: 35px;
+	background-position: center center;
+	background-size: cover;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+
+}
+.hidden {
+	display: none;
+}
+.btnSection:focus{
+	outline: 0;
+}
+
+.btnPersonalData {
+	background-image: url('../images/user.svg');
+}
+.btnJob {
+	background-image: url('../images/suitcase.svg');
+}
+.btnEducation {
+	background-image: url('../images/education.svg');
+}
+.btnSkills {
+	background-image: url('../images/skills.svg');
+}
+.btnOtherDetails {
+	background-image: url('../images/id-card.svg');
+}
+.btnRemove {
+	background-image: url('../images/remove.svg');
+	position:absolute;
+	top: 5px;
 	right: 15px;
 	width: 35px;
 	height: 35px;
@@ -178,23 +215,8 @@ body {
 	border: none;
 	cursor: pointer;
 }
-.btnSection:focus{
+.btnRemove:focus{
 	outline: 0;
-}
-.btnPersonalData {
-	background-image: url('../images/user.png');
-}
-.btnJob {
-	background-image: url('../images/suitcase.png');
-}
-.btnEducation {
-	background-image: url('../images/education.png');
-}
-.btnSkills {
-	background-image: url('../images/skills.png');
-}
-.btnOtherDetails {
-	background-image: url('../images/id-card.png');
 }
 
 .input-form-buttoms {
@@ -242,15 +264,6 @@ body {
 	/*font-weight: bold;*/
 }
 
-.boxfield {
-	display: flex;
-	flex-direction: column;
-	display: none;
-}
-
-.boxfield.active {
-	display: block;
-}
 
 /*HABILIDADES*/
 .input-form-skills {
@@ -359,10 +372,6 @@ body {
 	padding-top: 40px;
 	height: 0;
 	width: 40px;
-}
-
-.boxfieldsetjob {
-	display: none;
 }
 
 /*MEDIAQUERIES*/
