--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,19 @@ h1 {
 body {
 	background-color: white;
 }
+.principal-content {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+
+	}
+			.principal-title {
+			width: 100%;
+			text-align: center;
+			font-family: 'Indie Flower';
+			font-size: 4em;
+			font-weight: bold;
+		}
 .personalizar {
 	max-width: 420px;
 	margin-top: 100px;
