--- a/styles/style.css
+++ b/styles/style.css
@@ -264,6 +264,43 @@ body {
 	/*font-weight: bold;*/
 }
 
+/*NETWORKS*/
+.networks label {
+	display: none;
+	margin-bottom: 10px;
+}
+.socialNetworks {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 10px;
+}
+.networks {
+	display: flex;
+	flex-direction: column;
+}
+.twitterNetwork,
+.linkedinNetwork {
+	display: flex;
+	width: 90%;
+	align-self:flex-end;
+	margin-bottom: 20px;
+
+}
+.twitterLogo {
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	left: 15px;
+	background-image: url('../images/twitter.svg');
+}
+.linkedinLogo {
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	left: 15px;
+	background-image: url('../images/linkedin.svg');
+}
+
 
 /*HABILIDADES*/
 .input-form-skills {
@@ -365,13 +402,17 @@ body {
 	}
 
 .up-button a {
-	background-image: url(../images/up-button.png);
+	background-image: url(../images/up-button.svg);
 	overflow: hidden;
 	display: block;
 	background-size: 40px 40px;
 	padding-top: 40px;
 	height: 0;
 	width: 40px;
+}
+
+.up-button a:hover {
+    background-image: url(../images/up-button-solid.svg);
 }
 
 /*MEDIAQUERIES*/
