--- a/styles/style.css
+++ b/styles/style.css
@@ -15,20 +15,22 @@ h1 {
 
 body {
 	background-color: white;
-}
+	display: flex;
+	flex-direction: column;
+	}
 .principal-content {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-
+	min-height: 100vh;
 	}
-			.principal-title {
-			width: 100%;
-			text-align: center;
-			font-family: 'Indie Flower';
-			font-size: 4em;
-			font-weight: bold;
-		}
+.principal-title {
+	width: 100%;
+	text-align: center;
+	font-family: 'Indie Flower';
+	font-size: 4em;
+	font-weight: bold;
+	}
 .personalizar {
 	max-width: 420px;
 	margin-top: 100px;
