--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -45,12 +45,31 @@
 	list-style-type: none;
 }
 
-/*@media all and (min-width: 700px) {
-	.logo-cabecera img {
-		width: 235px;
-		max-width: 235px;
-	}
-}*/
+/*FOOTER*/
+.footer {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	height: 70px;
+	background-color: #272727;
+}
+.copy {
+	color: white;
+}
+
+.up-button a {
+	background-image: url(../images/up-button.svg);
+	overflow: hidden;
+	display: block;
+	background-size: 40px 40px;
+	padding-top: 40px;
+	height: 0;
+	width: 40px;
+}
+
+.up-button a:hover {
+	background-image: url(../images/up-button-solid.svg);
+}
 
 @media all and (min-width: 900px) {
 	.header {
@@ -59,5 +78,9 @@
 		align-items: center;
 		justify-content: space-between;
 		height: 100px;
+		width: 100%;
+	}
+	.footer {
+		width: 100%;
 	}
 }
