--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ body {
 	height: 90px;
 	width: 90px;
 }
+
 /*Pagina principal*/
 .background {
 	height: 100vh;
@@ -126,6 +127,8 @@ body {
 }
 .prev-photo img{
 	border-radius: 50%;
+	max-width: 120px;
+	max-height: 120px;
 }
 .prev-description,
 .prev-education,
