--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	min-height: 100vh;
 }
 .principal-title {
 	width: 100%;
@@ -62,7 +61,6 @@ body {
 	height: 90px;
 	width: 90px;
 }
-
 /*Pagina principal*/
 .background {
 	height: 100vh;
@@ -114,7 +112,7 @@ body {
 	line-height: 1.5;
 	background-color: #cbcbcb;
 	height: auto;
-
+	margin-bottom: 30px;
 }
 .prev-info-personaldates {
 	display: flex;
@@ -128,8 +126,6 @@ body {
 }
 .prev-photo img{
 	border-radius: 50%;
-	max-width: 120px;
-	max-height: 120px;
 }
 .prev-description,
 .prev-education,
@@ -419,7 +415,7 @@ fieldset {
 .progress-bar__item {
 	border-radius: inherit;
 	height: inherit;
-	background: #006E9C;
+	background: blue;
 	width: 0%;
 	transition: width ease 1s;
 
@@ -507,7 +503,7 @@ fieldset {
 	.prev-content {
 		display: flex;
 		flex-direction: row-reverse;
-		height: 100vh;
+		height: auto;
 		width: 100%;
 	}
 	.prev-info-experience {
