--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ body {
 	flex-wrap: wrap;
 	align-items: center;
 	padding: 10px;
-	background-color: #f2f2f2;
+	background-color: #ffe7b9;
 }
 .prev-photo {
 	margin-right: 10px;
