--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@ body {
 	width: 100%;
 	text-align: center;
 	font-family: 'Indie Flower';
+	color: #FFAB33;
 	font-size: 3em;
 	font-weight: bold;
 	margin-top: 170px;
@@ -76,16 +77,18 @@ body {
 
 .title {
 	font-family: 'Indie Flower';
-	color: white;
 	font-size: 4em;
 }
-
+li {
+	list-style: none;
+}
 .text {
 	color: white;
 	text-decoration: none;
 }
 .text:hover {
 	font-weight: bold;
+	color: #8b0061;
 }
 .principal-logo {
 	border-bottom: 5px solid white;
@@ -139,7 +142,10 @@ body {
 	font-weight: bold;
 	margin-top: 0px;
 }
-
+.camps-titles{
+	font-weight: bold;
+	display: inline;
+}
 /*FORMULARIO*/
 
 .total-form {
