--- a/styles/style.css
+++ b/styles/style.css
@@ -420,7 +420,6 @@ fieldset {
 	margin: 20px;
 	overflow: hidden;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-
 }
 
 .hidden {
@@ -429,10 +428,25 @@ fieldset {
 .progress-bar__item {
 	border-radius: inherit;
 	height: inherit;
-	background: blue;
+background: rgba(241,231,103,1);
+background: -moz-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(241,231,103,1)), color-stop(100%, rgba(254,182,69,1)));
+background: -webkit-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+background: -ms-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#feb645', GradientType=1 );
 	width: 0%;
 	transition: width ease 1s;
+}
 
+.box-skills {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.skill1 {
+	text-align: center;
 }
 
 #set-progress {
